## Process this file with automake to produce Makefile.in
## Copyright: Sámediggi/Divvun/UiT
## Licence: GPL v3+

# List all md files that should be created from source files in the
# MD_PAGES variable. The filename pattern is as follows:
#
# dir/filename.lexc => filename-dir.md

MD_PAGES=root-morphology.md          \
		 adjectives-affixes.md       \
		 adjectives-stems.md         \
		 conjunctions-stems.md       \
		 nouns-affixes.md            \
		 numerals-stems.md           \
		 pronouns-stems.md           \
		 verbs-affixes.md            \
		 verbs-stems.md
# abbreviations-stems.md      \
# acronyms-stems.md           \
# adpositions-stems.md        \
# adverbs-stems.md            \
# clitics-morphology.md       \
# compounding-morphology.md   \
# interjections-stems.md      \
# nouns-stems.md              \
# particles-stems.md          \
# propernouns-stems.md        \
# propernouns-affixes.md      \
# punctuation-stems.md        \
# smi-propernouns-stems.md    \
# subjunctions-stems.md

include $(top_srcdir)/../giella-core/am-shared/docs-dir-include.am
